[gd_scene load_steps=5 format=2]

[ext_resource path="res://Juego/UI/BarrasInfo/SaludBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/Proyectiles/Canion.tscn" type="PackedScene" id=3]
[ext_resource path="res://Juego/Naves/NaveBase.gd" type="Script" id=5]
[ext_resource path="res://Juego/SFX/dnio.ogg" type="AudioStream" id=6]

[node name="NaveBase" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 5 )
hitpoints = 20.0

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Canion" parent="." instance=ExtResource( 3 )]

[node name="danio_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
pitch_scale = 0.58
bus = "SFX"

[node name="SaludBar" parent="." instance=ExtResource( 2 )]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
